[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/levels/GameOver.gd" type="Script" id=1]
[ext_resource path="res://fonts/ubuntu-font-family-0.83/UbuntuMono-R.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -504.0
margin_top = -292.0
margin_right = -261.0
margin_bottom = -225.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "A FATAL error has occurred!

Press any key to continue..."

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
color = Color( 0, 0, 0, 1 )

[node name="BootTimer" type="Timer" parent="."]
one_shot = true

[node name="LaunchingLabel" type="Label" parent="."]
visible = false
margin_left = -504.832
margin_top = -219.328
margin_right = -312.832
margin_bottom = -202.328
text = "Starting a new terminal session..."
[connection signal="timeout" from="BootTimer" to="." method="_on_BootTimer_timeout"]
